2009-09-22  Lluis Sanchez Gual  <lluis@novell.com>

	* IDebuggerServer.cs:
	* MonoDebuggerSession.cs: Watch the parent process, and stop
	  the server if the parent dies.

2009-09-17  Lluis Sanchez Gual  <lluis@novell.com>

	* IDebuggerServer.cs:
	* MonoDebuggerSession.cs: Implemented AllowBreakEventChanges
	  property.

	* Mono.Debugging.Backend.Mdb.csproj: Don't require specific
	  versions.

2009-08-28  Lluis Sanchez Gual  <lluis@novell.com>

	* Mono.Debugging.Backend.Mdb.csproj: Updated.

	* DebuggerController.cs: Propagate mono env vars to the
	  debugged process.

2009-08-13  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDebuggerSessionFactory.cs: Use the new AssemblyContext
	  class to query and resolve assemblies.

2009-06-12  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDebuggerSessionFactory.cs: Fix nullref.

2009-06-04  Lluis Sanchez Gual  <lluis@novell.com>

	* DebuggerController.cs:
	* IDebuggerController.cs: Track api changes.

	* IDebuggerServer.cs:
	* MonoDebuggerSession.cs: Cache the mdb version usead by each
	  mono prefix, to avoid having to auto detect it at every run.

2009-05-24  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDebuggerSessionFactory.cs: Track api change.

2009-05-19  Lluis Sanchez Gual  <lluis@novell.com>

	* Mono.Debugging.Backend.Mdb.csproj: Flush.

2009-05-06  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDebuggerStartInfo.cs: Don't enable user modules for
	  normal app debugging.

2009-05-04  Lluis Sanchez Gual  <lluis@novell.com>

	* IDebuggerServer.cs:
	* MonoDebuggerSession.cs: Try to detect the mdb version only
	  once per session.

	* MonoDebuggerStartInfo.cs: Register user modules.

	* MonoDebuggerSessionFactory.cs: Use the default runtime if
	  none is specified.

2009-04-27  Lluis Sanchez Gual  <lluis@novell.com>

	* Makefile:
	* Manifest.addin.xml:
	* IDebuggerServer.cs:
	* DebuggerController.cs:
	* MonoDebuggerSession.cs:
	* MonoDebuggerStartInfo.cs:
	* MonoDebuggerSessionFactory.cs: